fix: make Vantient Quest deletable with LexicalBlockWithAlignableContents

--- a/packages/lexical-playground/src/ui/VantientQuestComponent.css
+++ b/packages/lexical-playground/src/ui/VantientQuestComponent.css
@@ -20,6 +20,7 @@
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans',
     'Helvetica Neue', sans-serif;
   box-sizing: border-box;
+  text-align: left;
 }
 .VantientQuestContainer * {
   box-sizing: border-box;
